--- a/tables/funding_rates_ETH.tex
+++ b/tables/funding_rates_ETH.tex
@@ -1,5 +1,5 @@
 \renewcommand{\maxnum}{0.0159}
-\begin{tabular}{@{}l@{\hspace{3mm}}rrrrrrrr@{}}
+\begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
 \toprule
 {} &               std &      mean &        min &       25\% &      50\% &      75\% &       max &  count \\
 \midrule
