--- a/tables/funding_rates_SNX.tex
+++ b/tables/funding_rates_SNX.tex
@@ -1,16 +1,13 @@
 \renewcommand{\maxnum}{0.0332}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
-\toprule
-{} &               std &       mean &        min &       25\% &       50\% &      75\% &       max &  count \\
-\midrule
-{\bf Contango} &  \databar{0.0066} &   $0.0062$ &  $-0.0183$ &   $0.0011$ &   $0.0057$ &  $0.0090$ &  $0.0559$ &    540 \\
-Gate           &  \databar{0.0138} &   $0.0052$ &  $-0.1342$ &   $0.0100$ &   $0.0100$ &  $0.0100$ &  $0.0100$ &    540 \\
-Binance        &  \databar{0.0195} &  $-0.0027$ &  $-0.1322$ &  $-0.0092$ &   $0.0064$ &  $0.0100$ &  $0.0233$ &    540 \\
-Bitget         &  \databar{0.0196} &  $-0.0028$ &  $-0.1325$ &  $-0.0092$ &   $0.0063$ &  $0.0099$ &  $0.0231$ &    540 \\
-Bybit          &  \databar{0.0199} &  $-0.0012$ &  $-0.1815$ &  $-0.0070$ &   $0.0100$ &  $0.0100$ &  $0.0524$ &    540 \\
-Huobi          &  \databar{0.0201} &   $0.0053$ &  $-0.3293$ &   $0.0100$ &   $0.0100$ &  $0.0100$ &  $0.0100$ &    538 \\
-OKX            &  \databar{0.0270} &  $-0.0071$ &  $-0.2342$ &  $-0.0208$ &  $-0.0037$ &  $0.0102$ &  $0.0494$ &    540 \\
-dYdX           &  \databar{0.0297} &  $-0.0176$ &  $-0.2268$ &  $-0.0287$ &  $-0.0122$ &  $0.0011$ &  $0.0568$ &    540 \\
-CoinEx         &  \databar{0.0332} &  $-0.0164$ &  $-0.3270$ &  $-0.0326$ &  $-0.0127$ &  $0.0019$ &  $0.1391$ &    540 \\
-\bottomrule
+ & std & mean & min & 25\% & 50\% & 75\% & max & count \\
+{\bf Contango} & \databar{0.0066} & $0.0062$ & $-0.0183$ & $0.0011$ & $0.0057$ & $0.0090$ & $0.0559$ & 540 \\
+Gate & \databar{0.0138} & $0.0052$ & $-0.1342$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
+Binance & \databar{0.0195} & $-0.0027$ & $-0.1322$ & $-0.0092$ & $0.0064$ & $0.0100$ & $0.0233$ & 540 \\
+Bitget & \databar{0.0196} & $-0.0028$ & $-0.1325$ & $-0.0092$ & $0.0063$ & $0.0099$ & $0.0231$ & 540 \\
+Bybit & \databar{0.0199} & $-0.0012$ & $-0.1815$ & $-0.0070$ & $0.0100$ & $0.0100$ & $0.0524$ & 540 \\
+Huobi & \databar{0.0201} & $0.0053$ & $-0.3293$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 538 \\
+OKX & \databar{0.0270} & $-0.0071$ & $-0.2342$ & $-0.0208$ & $-0.0037$ & $0.0102$ & $0.0494$ & 540 \\
+dYdX & \databar{0.0297} & $-0.0176$ & $-0.2268$ & $-0.0287$ & $-0.0122$ & $0.0011$ & $0.0568$ & 540 \\
+CoinEx & \databar{0.0332} & $-0.0164$ & $-0.3270$ & $-0.0326$ & $-0.0127$ & $0.0019$ & $0.1391$ & 540 \\
 \end{tabular}
