--- a/tables/funding_rates_CRV.tex
+++ b/tables/funding_rates_CRV.tex
@@ -1,16 +1,13 @@
 \renewcommand{\maxnum}{0.0606}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
-\toprule
-{} &               std &       mean &        min &       25\% &       50\% &      75\% &       max &  count \\
-\midrule
-{\bf Contango} &  \databar{0.0042} &   $0.0102$ &  $-0.0101$ &   $0.0081$ &   $0.0100$ &  $0.0128$ &  $0.0441$ &    538 \\
-Bybit          &  \databar{0.0206} &   $0.0027$ &  $-0.2381$ &   $0.0080$ &   $0.0100$ &  $0.0100$ &  $0.0217$ &    540 \\
-Gate           &  \databar{0.0210} &   $0.0046$ &  $-0.3219$ &   $0.0086$ &   $0.0100$ &  $0.0100$ &  $0.0100$ &    540 \\
-Huobi          &  \databar{0.0212} &   $0.0070$ &  $-0.2391$ &   $0.0100$ &   $0.0100$ &  $0.0100$ &  $0.0100$ &    539 \\
-Binance        &  \databar{0.0232} &  $-0.0008$ &  $-0.2666$ &  $-0.0036$ &   $0.0100$ &  $0.0100$ &  $0.0100$ &    540 \\
-Bitget         &  \databar{0.0234} &  $-0.0009$ &  $-0.2706$ &  $-0.0045$ &   $0.0092$ &  $0.0100$ &  $0.0109$ &    540 \\
-dYdX           &  \databar{0.0308} &  $-0.0093$ &  $-0.3450$ &  $-0.0190$ &  $-0.0051$ &  $0.0080$ &  $0.0964$ &    540 \\
-OKX            &  \databar{0.0424} &  $-0.0079$ &  $-0.6419$ &  $-0.0197$ &  $-0.0050$ &  $0.0107$ &  $0.0977$ &    540 \\
-CoinEx         &  \databar{0.0606} &  $-0.0205$ &  $-0.7500$ &  $-0.0362$ &  $-0.0166$ &  $0.0017$ &  $0.4581$ &    540 \\
-\bottomrule
+ & std & mean & min & 25\% & 50\% & 75\% & max & count \\
+{\bf Contango} & \databar{0.0042} & $0.0102$ & $-0.0101$ & $0.0081$ & $0.0100$ & $0.0128$ & $0.0441$ & 538 \\
+Bybit & \databar{0.0206} & $0.0027$ & $-0.2381$ & $0.0080$ & $0.0100$ & $0.0100$ & $0.0217$ & 540 \\
+Gate & \databar{0.0210} & $0.0046$ & $-0.3219$ & $0.0086$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
+Huobi & \databar{0.0212} & $0.0070$ & $-0.2391$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 539 \\
+Binance & \databar{0.0232} & $-0.0008$ & $-0.2666$ & $-0.0036$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
+Bitget & \databar{0.0234} & $-0.0009$ & $-0.2706$ & $-0.0045$ & $0.0092$ & $0.0100$ & $0.0109$ & 540 \\
+dYdX & \databar{0.0308} & $-0.0093$ & $-0.3450$ & $-0.0190$ & $-0.0051$ & $0.0080$ & $0.0964$ & 540 \\
+OKX & \databar{0.0424} & $-0.0079$ & $-0.6419$ & $-0.0197$ & $-0.0050$ & $0.0107$ & $0.0977$ & 540 \\
+CoinEx & \databar{0.0606} & $-0.0205$ & $-0.7500$ & $-0.0362$ & $-0.0166$ & $0.0017$ & $0.4581$ & 540 \\
 \end{tabular}
