--- a/tables/funding_rates_ETH.tex
+++ b/tables/funding_rates_ETH.tex
@@ -1,16 +1,13 @@
 \renewcommand{\maxnum}{0.0159}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
-\toprule
-{} &               std &      mean &        min &       25\% &      50\% &      75\% &       max &  count \\
-\midrule
-{\bf Contango} &  \databar{0.0019} &  $0.0001$ &  $-0.0227$ &   $0.0003$ &  $0.0005$ &  $0.0009$ &  $0.0019$ &    540 \\
-Binance        &  \databar{0.0045} &  $0.0045$ &  $-0.0177$ &   $0.0014$ &  $0.0046$ &  $0.0087$ &  $0.0100$ &    540 \\
-Bybit          &  \databar{0.0050} &  $0.0054$ &  $-0.0126$ &   $0.0018$ &  $0.0067$ &  $0.0100$ &  $0.0100$ &    540 \\
-Bitget         &  \databar{0.0051} &  $0.0044$ &  $-0.0177$ &   $0.0017$ &  $0.0048$ &  $0.0090$ &  $0.0109$ &    540 \\
-Gate           &  \databar{0.0059} &  $0.0021$ &  $-0.0221$ &  $-0.0020$ &  $0.0027$ &  $0.0069$ &  $0.0100$ &    540 \\
-OKX            &  \databar{0.0079} &  $0.0035$ &  $-0.0500$ &  $-0.0012$ &  $0.0033$ &  $0.0083$ &  $0.0274$ &    540 \\
-Huobi          &  \databar{0.0088} &  $0.0070$ &  $-0.0346$ &   $0.0044$ &  $0.0100$ &  $0.0100$ &  $0.0959$ &    540 \\
-dYdX           &  \databar{0.0145} &  $0.0072$ &  $-0.0367$ &  $-0.0008$ &  $0.0071$ &  $0.0137$ &  $0.1391$ &    540 \\
-CoinEx         &  \databar{0.0159} &  $0.0000$ &  $-0.0692$ &  $-0.0085$ &  $0.0002$ &  $0.0095$ &  $0.0759$ &    540 \\
-\bottomrule
+ & std & mean & min & 25\% & 50\% & 75\% & max & count \\
+{\bf Contango} & \databar{0.0019} & $0.0001$ & $-0.0227$ & $0.0003$ & $0.0005$ & $0.0009$ & $0.0019$ & 540 \\
+Binance & \databar{0.0045} & $0.0045$ & $-0.0177$ & $0.0014$ & $0.0046$ & $0.0087$ & $0.0100$ & 540 \\
+Bybit & \databar{0.0050} & $0.0054$ & $-0.0126$ & $0.0018$ & $0.0067$ & $0.0100$ & $0.0100$ & 540 \\
+Bitget & \databar{0.0051} & $0.0044$ & $-0.0177$ & $0.0017$ & $0.0048$ & $0.0090$ & $0.0109$ & 540 \\
+Gate & \databar{0.0059} & $0.0021$ & $-0.0221$ & $-0.0020$ & $0.0027$ & $0.0069$ & $0.0100$ & 540 \\
+OKX & \databar{0.0079} & $0.0035$ & $-0.0500$ & $-0.0012$ & $0.0033$ & $0.0083$ & $0.0274$ & 540 \\
+Huobi & \databar{0.0088} & $0.0070$ & $-0.0346$ & $0.0044$ & $0.0100$ & $0.0100$ & $0.0959$ & 540 \\
+dYdX & \databar{0.0145} & $0.0072$ & $-0.0367$ & $-0.0008$ & $0.0071$ & $0.0137$ & $0.1391$ & 540 \\
+CoinEx & \databar{0.0159} & $0.0000$ & $-0.0692$ & $-0.0085$ & $0.0002$ & $0.0095$ & $0.0759$ & 540 \\
 \end{tabular}
