--- a/tables/funding_rates_LINK.tex
+++ b/tables/funding_rates_LINK.tex
@@ -1,16 +1,13 @@
 \renewcommand{\maxnum}{0.0202}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
-\toprule
-{} &               std &       mean &        min &       25\% &       50\% &       75\% &        max &  count \\
-\midrule
-{\bf Contango} &  \databar{0.0020} &  $-0.0024$ &  $-0.0257$ &  $-0.0024$ &  $-0.0021$ &  $-0.0016$ &  $-0.0003$ &    540 \\
-Huobi          &  \databar{0.0042} &   $0.0085$ &  $-0.0231$ &   $0.0100$ &   $0.0100$ &   $0.0100$ &   $0.0150$ &    539 \\
-Binance        &  \databar{0.0052} &   $0.0065$ &  $-0.0295$ &   $0.0041$ &   $0.0093$ &   $0.0100$ &   $0.0222$ &    540 \\
-Bitget         &  \databar{0.0053} &   $0.0066$ &  $-0.0299$ &   $0.0044$ &   $0.0092$ &   $0.0100$ &   $0.0230$ &    540 \\
-Gate           &  \databar{0.0054} &   $0.0027$ &  $-0.0315$ &  $-0.0008$ &   $0.0032$ &   $0.0068$ &   $0.0100$ &    540 \\
-Bybit          &  \databar{0.0065} &   $0.0065$ &  $-0.0600$ &   $0.0040$ &   $0.0100$ &   $0.0100$ &   $0.0285$ &    540 \\
-OKX            &  \databar{0.0109} &   $0.0029$ &  $-0.0603$ &  $-0.0035$ &   $0.0030$ &   $0.0094$ &   $0.0506$ &    540 \\
-dYdX           &  \databar{0.0124} &   $0.0070$ &  $-0.0457$ &   $0.0012$ &   $0.0075$ &   $0.0129$ &   $0.0571$ &    540 \\
-CoinEx         &  \databar{0.0202} &  $-0.0058$ &  $-0.0873$ &  $-0.0155$ &  $-0.0037$ &   $0.0067$ &   $0.0620$ &    540 \\
-\bottomrule
+ & std & mean & min & 25\% & 50\% & 75\% & max & count \\
+{\bf Contango} & \databar{0.0020} & $-0.0024$ & $-0.0257$ & $-0.0024$ & $-0.0021$ & $-0.0016$ & $-0.0003$ & 540 \\
+Huobi & \databar{0.0042} & $0.0085$ & $-0.0231$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0150$ & 539 \\
+Binance & \databar{0.0052} & $0.0065$ & $-0.0295$ & $0.0041$ & $0.0093$ & $0.0100$ & $0.0222$ & 540 \\
+Bitget & \databar{0.0053} & $0.0066$ & $-0.0299$ & $0.0044$ & $0.0092$ & $0.0100$ & $0.0230$ & 540 \\
+Gate & \databar{0.0054} & $0.0027$ & $-0.0315$ & $-0.0008$ & $0.0032$ & $0.0068$ & $0.0100$ & 540 \\
+Bybit & \databar{0.0065} & $0.0065$ & $-0.0600$ & $0.0040$ & $0.0100$ & $0.0100$ & $0.0285$ & 540 \\
+OKX & \databar{0.0109} & $0.0029$ & $-0.0603$ & $-0.0035$ & $0.0030$ & $0.0094$ & $0.0506$ & 540 \\
+dYdX & \databar{0.0124} & $0.0070$ & $-0.0457$ & $0.0012$ & $0.0075$ & $0.0129$ & $0.0571$ & 540 \\
+CoinEx & \databar{0.0202} & $-0.0058$ & $-0.0873$ & $-0.0155$ & $-0.0037$ & $0.0067$ & $0.0620$ & 540 \\
 \end{tabular}
