add health factor plot

--- a/tables/corr_CRV.tex
+++ b/tables/corr_CRV.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
- & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
+ & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
 Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.17 \\
 Bybit & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 \\
 OKX & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.25 \\
@@ -8,5 +8,5 @@ Gate & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{
 Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{E8E8FF}} \color[HTML]{000000} -0.17 \\
 dYdX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{E2E2FF}} \color[HTML]{000000} -0.22 \\
 CoinEx & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 \\
-Contango & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.25 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{E8E8FF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E2E2FF}} \color[HTML]{000000} -0.22 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+{\bf Contango} & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.25 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{E8E8FF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E2E2FF}} \color[HTML]{000000} -0.22 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
