--- a/tables/corr_AAVE.tex
+++ b/tables/corr_AAVE.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
-Bybit & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.62 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.42 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
-OKX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-Huobi & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.20 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
-Gate & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.62 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 \\
-Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
-dYdX & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.42 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 \\
-CoinEx & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.20 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-{\bf Contango} & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 \\
+Bybit & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.62 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.42 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 \\
+OKX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 \\
+Huobi & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.20 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 \\
+Gate & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.62 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.60 & {\cellcolor[HTML]{FFB8B8}} \color[HTML]{000000} 0.55 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 \\
+dYdX & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.42 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
+CoinEx & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.20 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 \\
+{\bf Contango} & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
