--- a/tables/corr_SNX.tex
+++ b/tables/corr_SNX.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{D4D4FF}} \color[HTML]{000000} -0.33 \\
-Bybit & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.64 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{D8D8FF}} \color[HTML]{000000} -0.31 \\
-OKX & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{E4E4FF}} \color[HTML]{000000} -0.21 \\
-Huobi & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.14 \\
-Gate & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.64 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 \\
-Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{D6D6FF}} \color[HTML]{000000} -0.33 \\
-dYdX & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 \\
-CoinEx & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 \\
-{\bf Contango} & {\cellcolor[HTML]{D4D4FF}} \color[HTML]{000000} -0.33 & {\cellcolor[HTML]{D8D8FF}} \color[HTML]{000000} -0.31 & {\cellcolor[HTML]{E4E4FF}} \color[HTML]{000000} -0.21 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.14 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{D6D6FF}} \color[HTML]{000000} -0.33 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{DBDBFF}} \color[HTML]{000000} -0.29 \\
+Bybit & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.64 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.26 \\
+OKX & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.16 \\
+Huobi & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 \\
+Gate & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.64 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{DBDBFF}} \color[HTML]{000000} -0.29 \\
+dYdX & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 \\
+CoinEx & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 \\
+{\bf Contango} & {\cellcolor[HTML]{DBDBFF}} \color[HTML]{000000} -0.29 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.26 & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.16 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 & {\cellcolor[HTML]{DBDBFF}} \color[HTML]{000000} -0.29 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
