--- a/tables/funding_rates_MKR.tex
+++ b/tables/funding_rates_MKR.tex
@@ -1,13 +1,16 @@
 \renewcommand{\maxnum}{0.0324}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
+\toprule
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
+\midrule
 Huobi & \databar{0.0023} & $0.0097$ & $-0.0143$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
-{\bf Contango} & \databar{0.0039} & $-0.0015$ & $-0.0233$ & $-0.0023$ & $-0.0017$ & $-0.0008$ & $0.0662$ & 540 \\
 Binance & \databar{0.0041} & $0.0082$ & $-0.0249$ & $0.0089$ & $0.0100$ & $0.0100$ & $0.0178$ & 540 \\
+{\bf Contango} & \databar{0.0042} & $-0.0016$ & $-0.0266$ & $-0.0022$ & $-0.0017$ & $-0.0010$ & $0.0665$ & 540 \\
 Bitget & \databar{0.0043} & $0.0082$ & $-0.0255$ & $0.0090$ & $0.0097$ & $0.0103$ & $0.0175$ & 540 \\
 Gate & \databar{0.0056} & $0.0073$ & $-0.0320$ & $0.0079$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Bybit & \databar{0.0063} & $0.0076$ & $-0.0546$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0200$ & 540 \\
 OKX & \databar{0.0175} & $0.0025$ & $-0.0915$ & $-0.0082$ & $0.0023$ & $0.0127$ & $0.0745$ & 540 \\
 dYdX & \databar{0.0223} & $0.0107$ & $-0.0766$ & $0.0011$ & $0.0085$ & $0.0192$ & $0.1390$ & 540 \\
 CoinEx & \databar{0.0324} & $-0.0068$ & $-0.2696$ & $-0.0246$ & $-0.0062$ & $0.0100$ & $0.1088$ & 540 \\
+\bottomrule
 \end{tabular}
