--- a/tables/funding_rates_UNI.tex
+++ b/tables/funding_rates_UNI.tex
@@ -1,8 +1,10 @@
 \renewcommand{\maxnum}{0.0197}
 \begin{tabular}{@{}l@{\hspace{3mm}}r*{6}{R{10mm}}r@{}}
+\toprule
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
-{\bf Contango} & \databar{0.0032} & $-0.0014$ & $-0.0251$ & $-0.0022$ & $-0.0016$ & $-0.0004$ & $0.0512$ & 538 \\
+\midrule
 Huobi & \databar{0.0033} & $0.0095$ & $-0.0247$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
+{\bf Contango} & \databar{0.0037} & $-0.0015$ & $-0.0260$ & $-0.0023$ & $-0.0015$ & $-0.0004$ & $0.0507$ & 538 \\
 Gate & \databar{0.0055} & $0.0058$ & $-0.0211$ & $0.0027$ & $0.0088$ & $0.0100$ & $0.0100$ & 540 \\
 Binance & \databar{0.0057} & $0.0063$ & $-0.0192$ & $0.0044$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Bitget & \databar{0.0058} & $0.0064$ & $-0.0197$ & $0.0045$ & $0.0092$ & $0.0100$ & $0.0109$ & 540 \\
@@ -10,4 +12,5 @@ Bybit & \databar{0.0061} & $0.0062$ & $-0.0280$ & $0.0034$ & $0.0100$ & $0.0100$
 OKX & \databar{0.0109} & $0.0043$ & $-0.0359$ & $-0.0021$ & $0.0048$ & $0.0115$ & $0.0313$ & 540 \\
 CoinEx & \databar{0.0172} & $-0.0076$ & $-0.0729$ & $-0.0175$ & $-0.0066$ & $0.0044$ & $0.0478$ & 540 \\
 dYdX & \databar{0.0197} & $0.0061$ & $-0.0527$ & $-0.0037$ & $0.0070$ & $0.0174$ & $0.0848$ & 540 \\
+\bottomrule
 \end{tabular}
