--- a/tables/corr_UNI.tex
+++ b/tables/corr_UNI.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-Bybit & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 \\
-OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 \\
-Huobi & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 \\
-Gate & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 \\
-Bitget & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
-dYdX & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 \\
-CoinEx & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.02 \\
-{\bf Contango} & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.12 \\
+Bybit & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
+OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.05 \\
+Huobi & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.05 \\
+Gate & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+Bitget & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 \\
+dYdX & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.11 \\
+CoinEx & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 \\
+{\bf Contango} & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.12 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.05 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.05 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.11 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
